Operações em JS

--- a/aula06/exe02.html
+++ b/aula06/exe02.html
@@ -24,8 +24,8 @@
         Primeiros passos...
     </p>
     <script>
-        var nome = window.prompt('Qual é o seu nome?');
-        window.alert('É um grande prazer te conhecer, ' + nome + '!')
+        var nome = window.prompt('Qual é o seu nome?'); // Variável nome recebe o resultado do prompt;
+        window.alert('É um grande prazer te conhecer, ' + nome + '!') 
     </script>
 </body>
 </html>
