--- a/aula06/exe02.html
+++ b/aula06/exe02.html
@@ -24,7 +24,7 @@
         Primeiros passos...
     </p>
     <script>
-        var nome = window.prompt('Qual é o seu nome?'); // Variável nome recebe o resultado do prompt;
+        var nome = window.prompt('Qual é o seu nome?'); // Variável nome recebe o resultado do prompt.
         window.alert('É um grande prazer te conhecer, ' + nome + '!') 
     </script>
 </body>
