--- a/aula06/exe04.html
+++ b/aula06/exe04.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Exercício 3</title>
+    <title>Upper & Lower Case</title>
     <style>
         body {
             font: normal 3rem Arial;
