--- a/01-basico/comandos-básicos.html
+++ b/01-basico/comandos-básicos.html
@@ -27,6 +27,8 @@
         window.alert('Minha primeira mensagem!'); //janela com mensagem
         window.confirm('Está gostando de JS?'); //janela com botões de Ok ou Cancelar
         window.prompt('Qual é o seu nome?'); //janela de pergunta
+        window.console('Olá Mundo'); //grava a mensagem apenas no console
+        // você também pode usar os comandos sem window.
     </script>
 </body>
 </html>
